--- a/manifest.json
+++ b/manifest.json
@@ -60,7 +60,7 @@
         "usingComponents" : true,
         "permission" : {
             "scope.userLocation" : {
-                "desc" : ""
+                "desc" : "test"
             }
         }
     },
